# cpp-roller

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: argparse.hpp  common.hpp  extractor.hpp  grapher.hpp  roller.hpp
src/: CMakeLists.txt  argparse.cpp  common.cpp  extractor.cpp  grapher.cpp  main.cpp  roller.cpp
tests/: CMakeLists.txt  main.cpp
tests/files/: empty.cpp  nonexistent-include.cpp
tests/files/angle-include-dedup/: parent.cpp
tests/files/diamond/: common.cpp  left.cpp  parent.cpp  right.cpp
tests/files/duplicate-file/: child.cpp  parent.cpp
tests/files/include-directories/: parent.cpp
tests/files/include-directories/libA/: childA.cpp
tests/files/include-directories/libB/: childB.cpp
tests/files/multi-source/: sourceA.cpp  sourceB.cpp
tests/files/relative/: parent.cpp
tests/files/relative/children/: direct.cpp  transitive.cpp
tests/files/unicode/: parent.cpp  中文.cpp
tests/include/: files.hpp
tests/include/fixtures/: cleaner.hpp
tests/src/: files.cpp
